--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@react-navigation/native": "^7.0.14",
     "@react-navigation/native-stack": "^7.2.0",
     "aws-amplify": "^6.14.1",
-    "expo": "^52.0.35",
+    "axios": "^1.8.4",
+    "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-constants": "~17.0.5",
     "expo-font": "~13.0.3",
     "expo-haptics": "~14.0.1",
